Change Java version to 11